ocaml/testsuite/tests/jst-modular-extensions/user_error4.compilers.reference
File "user_error4.ml", line 21, characters 26-56:
21 | let _disabled_extension = [%extension.comprehensions] ();;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The extension "comprehensions" is disabled and cannot be used
